<resources>
    <string name="app_name">task1_ISA</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="new_here">New Here?</string>
    <string name="world_of">-World of learning-</string>
    <string name="enter_the">Enter the</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="make_your">Make Your</string>
    <string name="way_in">Way in....</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="renter_the_password">Renter the Password</string>
    <string name="signup">Sign Up</string>
    <string name="youre_almost_there">Youre almost there....</string>
    <string name="done">Done</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="college">College</string>
    <string name="branch">Branch</string>
    <string name="contact_info">Contact info</string>
    <string name="to_be_designed_later">To be designed later</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="renew">Renew</string>
    <string name="profile">Profile</string>
    <string name="account_info">Account Info</string>
    <string name="home">Home</string>
    <string name="add_account">Add Account</string>
    <string name="add">Add</string>
    <string name="info">Info</string>

</resources>