<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".page2">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="111dp"
        android:layout_height="121dp"
        android:src="@drawable/pg1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="418dp"
        android:layout_height="733dp"
        android:src="@drawable/sign_up"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="-1dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="187dp"
        android:layout_height="77dp"
        android:fontFamily="casual"
        android:text="@string/make_your"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="204dp"
        android:layout_height="67dp"
        android:fontFamily="cursive"
        android:text="@string/way_in"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <EditText
        android:id="@+id/ed1"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:background="@drawable/round_text"
        android:drawableLeft="@drawable/ic_baseline_edit_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/enter_your_e_mail"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392" />

    <EditText
        android:id="@+id/ed2"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:background="@drawable/round_text"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/enter_your_password"
        android:inputType="numberPassword"
        android:paddingLeft="20dp"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <EditText
        android:id="@+id/ed3"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:background="@drawable/round_text"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/renter_the_password"
        android:inputType="numberPassword"
        android:paddingLeft="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <Button
        android:id="@+id/btn3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:fontFamily="casual"
        android:text="Next"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />


</androidx.constraintlayout.widget.ConstraintLayout>